# photo-riso

./: .gitignore  README.md  pyproject.toml
data/: riso-palette-six.json
examples/: README.txt
scripts/: batch_all_mask_combos.py
src/photo_riso/: __init__.py  __main__.py  cli.py  cluster.py  image_io.py  ink_map.py  lab_colors.py  masks.py  preview.py
tests/: test_pipeline.py
